add open hours
