# backend/swagger/v1/swagger.yaml
@@ -74,10 +74,23 @@ paths:
                           type: string
                         store_image:
                           type: string
+                        open:
+                          type: object
+                          properties:
+                            from:
+                              type: string
+                              pattern: "(?-mix:^(?:[01]\\d|2[0-3]):[0-5]\\d$)"
+                            to:
+                              type: string
+                              pattern: "(?-mix:^(?:[01]\\d|2[0-3]):[0-5]\\d$)"
+                          required:
+                          - from
+                          - to
                       required:
                       - store_name
                       - address
                       - home_page
+                      - open
                 required:
                 - list
 servers:
